Best CSV listener done.